@@ -52,6 +52,7 @@ public class RunProfilerTask implements Task {
     private final PrintStream err;
     private static final String JAVA_OPTS = "JAVA_OPTS";
     private static final String CURRENT_DIR_KEY = "current.dir";
+    private static final Path TARGET_OUTPUT_PATH = Paths.get(System.getProperty(USER_DIR));
 
     public RunProfilerTask(PrintStream errStream) {
         this.err = errStream;
@@ -83,6 +84,7 @@ public class RunProfilerTask implements Task {
             pb.environment().put(JAVA_OPTS, getAgentArgs());
             pb.environment().put(BALLERINA_HOME, System.getProperty(BALLERINA_HOME));
             pb.environment().put(CURRENT_DIR_KEY, System.getProperty(USER_DIR));
+            pb.environment().put("java.command", System.getProperty("java.command"));
             pb.directory(new File(getProfilerPath(project).toUri()));
             Process process = pb.start();
             process.waitFor();
@@ -109,8 +111,8 @@ public class RunProfilerTask implements Task {
     private String getAgentArgs() {
         // add jacoco agent
         String jacocoArgLine = "-javaagent:" + Paths.get(System.getProperty(BALLERINA_HOME), "bre", "lib",
-                "jacocoagent.jar") + "=destfile=" + Paths.get(System.getProperty(USER_DIR))
-                        .resolve("build").resolve("jacoco").resolve("test.exec");
+                "jacocoagent.jar") + "=destfile=" + TARGET_OUTPUT_PATH.resolve("build").resolve("jacoco")
+                .resolve("test.exec");
         return jacocoArgLine + " ";
     }
 
@@ -129,17 +131,17 @@ public class RunProfilerTask implements Task {
 
     private Path getTargetPath(Project project) {
         if (project.kind() == ProjectKind.SINGLE_FILE_PROJECT) {
-            return Paths.get(System.getProperty(USER_DIR));
+            return TARGET_OUTPUT_PATH;
         }
         return project.targetDir();
     }
 
     private String getTargetFilePath(Project project) {
         if (project.kind() == ProjectKind.SINGLE_FILE_PROJECT) {
-            return Paths.get(System.getProperty(USER_DIR)).resolve(
-                    getFileNameWithoutExtension(project.sourceRoot()) + BLANG_COMPILED_JAR_EXT).toUri().getPath();
+            return Path.of(TARGET_OUTPUT_PATH.resolve(getFileNameWithoutExtension(project.sourceRoot()) +
+                    BLANG_COMPILED_JAR_EXT).toUri()).toString();
         }
-        return project.targetDir().resolve("bin").resolve(project.currentPackage().packageName() +
-                BLANG_COMPILED_JAR_EXT).toUri().getPath();
+        return Path.of(project.targetDir().resolve("bin").resolve(project.currentPackage().packageName() +
+                BLANG_COMPILED_JAR_EXT).toUri()).toString();
     }
 }
